add minor fixes

--- a/rebar.config
+++ b/rebar.config
@@ -30,7 +30,7 @@
 {deps, [
     {cowboy, "1.0.4"},
     {jsx   , "2.8.0"},
-    {cg_mon, ".*", {git, "https://github.com/rbkmoney/cg_mon.git", {branch, "master"}}}
+    {cg_mon, {git, "https://github.com/rbkmoney/cg_mon.git", {branch, "master"}}}
 ]}.
 
 {xref_checks, [
